Fix letter spacing for prompts.

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -9,6 +9,7 @@ h1 {
   font-family: 'Sen', sans-serif;
   font-weight: 500;
   font-size: 3.2rem;
+  letter-spacing: 0.2rem;
 }
 
 h3 {
